# test_electronNipk

./: CMakeLists.txt  Image.h  TestTimer.h  eliimage.cpp  eliimage.h  eliimagehandler.cpp  eliimagehandler.h  eliimageprocessing.cpp  eliimageprocessing.h  image.cpp  imagemath.h  main.cpp
